--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons-svg": "^4.4.2",
     "@metamask/detect-provider": "^2.0.0",
-    "antd": "^5.26.3",
+    "antd": "^4.24.16",
     "dotenv": "^17.0.1",
     "ethers": "^6.15.0",
     "next": "15.3.5",
@@ -21,12 +22,14 @@
     "@eslint/eslintrc": "^3",
     "@nomicfoundation/hardhat-toolbox": "^6.0.0",
     "@tailwindcss/postcss": "^4",
+    "@types/minimatch": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "hardhat": "^2.25.0",
+    "minimatch": "^10.0.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
