--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.0.1",
     "ethers": "^6.15.0",
     "next": "15.3.5",
+    "rc-util": "^4.21.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
