--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "antd": "^4.24.16",
     "dotenv": "^17.0.1",
     "ethers": "^6.15.0",
-    "next": "15.3.5",
+    "next": "^15.3.5",
+    "pg": "^8.16.3",
     "rc-util": "^4.21.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -25,6 +26,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/minimatch": "^6.0.0",
     "@types/node": "^20",
+    "@types/pg": "^8.15.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
